--- a/cat.html
+++ b/cat.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 <title>Your lovly cats</title>
 <meta charset="utf-8">
@@ -14,7 +14,7 @@
 <script src="jquery-3.4.1.js"></script>	
 </head>
 <body >
-	<div class="container-fluid">
+<div class="container-fluid">
 <div class="row">
 <div class="col-lg-12" style="height:20rem;">
 <div class="box">
@@ -45,7 +45,8 @@
 <center>
 <a href="#section2"><h4>УЗНАЙ НЕКОТОРЫЕ СОВЕТЫ ПО УХОДУ</h4></a>
 </center>
-</button></center>
+</button>
+</center>
 </div>
 У одного из котов, который пережил стресс, развилась мочекаменная болезнь - идиопатический цистит. После посещения 
 ветеринара, коту было назначено лечение,  специальный корм - Hill's для растворения струвитных камней и кристаллов у кошек. 
@@ -54,33 +55,32 @@
 неволе. Ваша кошка ест тот корм, который вы ей купили, которым вы  ее кормите. Важно присматриваться к поведению кошки и ее 
 самочувствию после кормления. Некоторые корма могут подходить одним кошкам, и не подходить другим. Заводчики кошек отдают 
 предпочтение трем видам корма, которые рекомендуют и другим в зависимости от здоровья вашей кошки и породы. 
-</div></div></div>
-</div>
+</div></div></div></div>
 <div class="row">
 <div class="col-lg-3" ></div>
 <div class='cot'>
-<div class="col-lg-3 "  style="background-color:yellow; ">
+<div class="col-lg-3 "  >
 <div class='cat' style="display: none"></div>
-    <p style="display: none" class="bn">
-	Hill's Prescription Diet Feline - очень хорошо помогает при мочекаменной болезни у кошек. Употребление этого корма в 
+<p style="display: none" class="bn">
+Hill's Prescription Diet Feline - очень хорошо помогает при мочекаменной болезни у кошек. Употребление этого корма в 
 течение двух недель, растворило струвиты в мочевом пузыре у кота. Есть виды корма для контроля веса, чувствительной кожи 
 и пищевой аллергии и т.д. Произведен корм в США. 
-     </p>
+</p>
 </div>
-	<div class="col-lg-3" style="background-color:pink;">
-	<div class='cat1' style="display: none"></div>
-    <p style="display: none" class="bn">
+<div class="col-lg-3" >
+<div class='cat1' style="display: none"></div>
+<p style="display: none" class="bn">
 ROYAL CANIN – имеет несколько видов корма для улучшения здоровья кошек и собак. Есть специальные виды  корма для шерсти, 
 иммунитета, для кормящих кошек, для домашних кошек и другие виды. Фирма была основана во Франции в 1967году, имеет 
 представительства в разных странах, в том числе и в России.	
-	</p>
+</p>
 </div>
-<div class="col-lg-3"  style="background-color:red;">
+<div class="col-lg-3"  >
 <div class='cat2' style="display: none"></div>
-    <p style="display: none" class="bn">
+<p style="display: none" class="bn">
 Purina One Природа Здоровья содержит натуральную водоросль спирулину. Этот корм хорош для кошек со слабым иммунитетом, 
 если у вашей кошки проблемы с пищеварением. По вкусу очень нравится кошкам, имеет приятный запах. Владелец марки: Nestle.
-	</p>
+</p>
 </div></div></div>
 <div class="main" id="section2">
 <div class="row">
@@ -93,7 +93,7 @@ Purina One Природа Здоровья содержит натуральну
 </button></center>
 </div></div>
 <div class="row">
-<div class="col-lg-4" style="background-color:green;">
+<div class="col-lg-4" >
 <img src="img/ry8.png" style="display: none" class="ry7">
 </div>
 <div class="col-lg-8">
@@ -108,7 +108,6 @@ Purina One Природа Здоровья содержит натуральну
 От корма зависит настроение, здоровье и продолжительность жизни вашей кошки. 
 </p><p>
 </div></div></div>
-                                 
 <div class="row">
 <div class="col-lg-12">
 <div style="display: none" class="box6">
@@ -117,15 +116,15 @@ Purina One Природа Здоровья содержит натуральну
 становятся умнее с предыдущими их сородичами. Кошки лучше понимают своих хозяев, больше понимают слов и фраз. 
 Я уверена, что это связано с кормлением кошки. Получая все необходимые вещества, мозг кошки развивается лучше.  
 Некоторые кошки пытаются разговаривать с людьми, пытаются произносить слова. Возможно, когда-нибудь в будущем,
- если человек продолжит дружбу и общение с кошкой, новое общении с кошкой будет отличаться. 
+если человек продолжит дружбу и общение с кошкой, новое общении с кошкой будет отличаться. 
 </p><p>
 Конечно, содержание кошек дает многие выгоды. Коты хорошие стрессотерапевты, отпугиватели грызунов.
- Они своего рода экстрасенсы, способные предвидеть природные катаклизмы, о чем свидетельствуют многие источники.  
+Они своего рода экстрасенсы, способные предвидеть природные катаклизмы, о чем свидетельствуют многие источники.  
 </p>
 </div></div></div>
 <div class="main" id="section2">
 <div class="row">
-<div class="col-lg-12" style="background-color;blue">
+<div class="col-lg-12" >
 <center>                                  
 <button class="box1" style="display: none"
 <center>                                  
@@ -134,11 +133,11 @@ Purina One Природа Здоровья содержит натуральну
 </button></center>                       
 </div></div></div>  
 <div class="row">
-<div class="col-lg-7" style="background-color:pink">
+<div class="col-lg-7" >
 <div class="box5" style="display: none">
 <p>
 Каждая порода кошки индивидуальна и по-своему хороша. Кто-то отдает предпочтение игривым кошкам, кому-то нравятся более 
-спокойные. Все кошки без исключения, любая порода, если вы будете заботиться о вашем питомце, будет вам за это благодарна. 
+спокойные. Все кошки без исключения, любая порода, если вы будете заботиться о вашем питомце, он будет вам за это благодарен. 
 Кошка, попавшая в ваш дом, становится членом вашей семьи, вашим всеобщим любимцем. Главное определить какой корм подходит 
 вашей кошке. Определите место ее личного пространства, лучше это будет укромный уголок в вашей квартире или доме, где никто 
 не сможет побеспокоить вашу кошку, если она решила отдохнуть, там же лучше установить ее кормушку и поилку, или в другом 
@@ -150,21 +149,20 @@ Purina One Природа Здоровья содержит натуральну
 предательство. Возможно, в каждом ее сне она видит встречу с вами, что она живет снова с вами в теплом и уютном доме. 
 </p>
 </div></div>
-<div class="col-lg-5" style="background-color:green">
+<div class="col-lg-5" >
 <img src="img/cat7.png" style="display: none" class="cat7">
 </div>  </div>  
-                              
 <div class="row">
-<div class="col-lg-12" style="background-color:pink">
+<div class="col-lg-12" >
 <div class="box6" style="display: none">
 <p>
 Если кошка ведет себя неспокойно, нужно показать ее ветеринару, возможно, у нее имеются какие-то проблемы со здоровьем.
 Иногда достаточно просто правильно подобрать корм и проблема может быстро исчезнуть. Всем кошкам без исключения необходима 
-когтеточка. Точить когти кошкам невозможно запретить, это у них своего рода такая гимнастика. 
+когтеточка. Точить когти кошкам невозможно запретить, это у них своего рода гимнастика. 
 </p>
 </div></div></div>
 <div class="row">
-<div class="col-lg-12" style="background-color:blue">
+<div class="col-lg-12" >
 <center>
 <button class="box7" style="display: none" >
 <center>
@@ -172,7 +170,7 @@ Purina One Природа Здоровья содержит натуральну
 </center>
 </button></center>
 </div></div>
-<div class="boxing" style="background-color:green;">
+<div class="boxing" >
 <div class="row">
 <div class="col-lg-12" >
 <div class='fon' >
@@ -189,7 +187,6 @@ Purina One Природа Здоровья содержит натуральну
 </p>
 </div>
 </div>
-
 </div>
 <div class="row">
 <div class="col-lg-12" >
@@ -306,10 +303,10 @@ $(".text2").fadeIn(2000) ;
 $(".cat,.cat1,.cat2,.box1,.ry7,.box7,.ry8").slideDown( 2000 )
 });
 $('.cat,.cat1,.cat2,.pers,.mkyn').hover(function() {
-    $(this).next().show();
+$(this).next().show();
 }, 
 function() {
-    $(this).next().hide();
+$(this).next().hide();
 });
 $(".box1").click(function (){
 $(".box2,.box5,.cat7,.box6,.box8,.box4,.box7").slideDown( 2000 )
@@ -318,8 +315,8 @@ $(".box7").click(function (){
 $(".fon,.fon1,.fon2,.fon3,.fon4").show(1000);
 });
 $('.fon,.fon1,.fon2,.fon3,.fon4').hover(function() {
-$('.all-cat,.all-cat1,.all-cat2,.all-cat3,.all-cat4').stop(1000).animate({'height': '42rem', 'width':'70rem',
- 'margin-left':'20rem', 'margin-top':'-4rem'},500);
+$('.all-cat,.all-cat1,.all-cat2,.all-cat3,.all-cat4').stop(1000).animate({'height': '43rem', 'width':'70rem',
+'margin-left':'7%', 'margin-top':'1rem'},500);
 $(this).next().show(1000); 
 }, 
 function() {
