--- a/cat.html
+++ b/cat.html
@@ -10,13 +10,13 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-<link href="cat.css" rel="stylesheet">
+<link href="cat3.css" rel="stylesheet">
 <script src="jquery-3.4.1.js"></script>	
 </head>
 <body >
 <div class="container-fluid">
 <div class="row">
-<div class="col-lg-12" style="height:20rem;">
+<div class="col-lg-12" style="height:20rem;background-color:pink; opacity:0.5;">
 <div class="box">
 <button type="button" class="btn btn-danger"  id="new-board-btn">
 <h4>Ваш здоровый питомец</h4>
@@ -24,11 +24,11 @@
 </button>
 </div></div></div>
 <div class="row">
-<div class="col-lg-4">
+<div class="col-lg-4" style="background-color:green; opacity:0.5;">
 </div>
-<div class="col-lg-3">
+<div class="col-lg-3" style="background-color:blue; opacity:0.5;">
 </div>
-<div class="col-lg-5">
+<div class="col-lg-5" style="background-color:green; opacity:0.5;">
 <div class="text1">
 <i><h2><p>Вы обожаете своего питомца?</p></br>
 <p>Вы заботитесь о здоровье своего кота?</br></p>
@@ -38,7 +38,7 @@
 <div class="row">
 <div class="col-lg-12">
 <div class="text2" style="display: none">
-<div class="box3"  >
+<div class="box3"     style="background-color: blue;">
 <div class="main" id="section1">
 <center>
 <button class="box1" style="display: none" >
@@ -57,8 +57,8 @@
 предпочтение трем видам корма, которые рекомендуют и другим в зависимости от здоровья вашей кошки и породы. 
 </div></div></div></div>
 <div class="row">
-<div class="col-lg-3" ></div>
-<div class='cot'>
+<div class="col-lg-3"  style="background: red;opacity:0.5;"></div>
+<div class='cot' style="background: blue;opacity:0.5;">
 <div class="col-lg-3 "  >
 <div class='cat' style="display: none"></div>
 <p style="display: none" class="bn">
@@ -93,11 +93,11 @@ Purina One Природа Здоровья содержит натуральну
 </button></center>
 </div></div>
 <div class="row">
-<div class="col-lg-4" >
+<div class="col-lg-4"  style="background: yellow;opacity:0.5;">
 <img src="img/ry8.png" style="display: none" class="ry7">
 </div>
 <div class="col-lg-8">
-<div style="display: none" class="box2">
+<div style="display: none" class="box2"  style="background: pink;opacity:0.5;">
 <p>
 По возможности выгуливайте своего питомца на природе, предварительно сделав ему необходимые прививки.
 Солнечные лучи необходимы любому живому существу. 
@@ -248,12 +248,27 @@ Purina One Природа Здоровья содержит натуральну
 хорошей когтеточкой. 
 </p></div>
 </div></div>
-<div class="row">
+<div class="row"  style="background: yellow;opacity:0.5;">
 <div class="col-lg-12" >
 <center><img src="img/198.png" style="display:none;" class="ry8"></center>
 </div></div>
-<div class="row">
+<div class="row"  style="background: pink;opacity:0.5;">
 <div class="col-lg-12" >
+
+<div class="box5" style="display: none">
+<p>
+Один персидский кот, проживший 15 лет со своими хозяевами, оставил в их сердце неизгладимый след. Все воспоминания связанные 
+с ним вызывали бурю эмоций, положительных впечатлений. Кот часто путешествовал со своими хозяевами, летал на самолете, 
+наблюдая облака в окно иллюминатора,  ездил на поезде, наблюдая города, мелькающие за окном, а ночью он разглядывал звездное 
+небо в окно поезда. Иногда хозяйка кота была вынуждена уезжать на несколько дней, кот оставался один дома. Целыми днями 
+персидский кот сидел на окне и пристально вглядывался в прохожих, пытаясь разглядеть в людях знакомый силуэт. 
+За пять минут до прихода своей хозяйки, кот подбегал к двери и ждал ее. Непонятно, откуда он мог знать, что его хозяйка уже 
+почти у дома и скоро будет подниматься по лестнице. Последние годы своей жизни персидский кот стал понимать все человеческие 
+слова, читал мысли своих хозяев. К сожалению, спасти кота не удалось. Он ушел на радугу по скандинавским поверьям, оттуда 
+наблюдает за своими хозяевами. Все же кошки обладают экстрасенсорными способностями, это подтвердит любой человек, проживший 
+многие годы рядом с кошкой.
+ </p>
+</div>
 <center>
 <p>
 <h2>Любите ваших питомцев и заботьтесь о них. </br>Вы в ответе за тех, кого приручили, помните об этом!</h2>
@@ -261,7 +276,7 @@ Purina One Природа Здоровья содержит натуральну
 </center>
 </div>
 </div>
-<div class="row">
+<div class="row"  style="background: green;opacity:0.5;">
 <div class="col-lg-12" >
 <center>
 <button class="box7" style="display: none" >
