--- a/cat.html
+++ b/cat.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-<link href="cat3.css" rel="stylesheet">
+<link href="cat.css" rel="stylesheet">
 <script src="jquery-3.4.1.js"></script>	
 </head>
 <body >
