--- a/cat.html
+++ b/cat.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<title>Your lovly cats</title>  <!-- new comment today-->
+<title>Your lovely cats</title>  
 <meta charset="utf-8">
 <meta name="description" content="Your lovly cats. Твои любимые кошки" />
 <meta name="robots" content="noodp" />
@@ -43,7 +43,7 @@
 <center>
 <button class="box1" style="display: none" >
 <center> 
-<a href="#section2"><h4>УЗНАЙ НЕКОТОРЫЕ СОВЕТЫ ПО УХОДУ</h4></a>  // new comment now today
+<a href="#section2"><h4>УЗНАЙ НЕКОТОРЫЕ СОВЕТЫ ПО УХОДУ</h4></a>  
 </center>
 </button>
 </center>
