--- a/cat.html
+++ b/cat.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<title>Your lovly cats</title>
+<title>Your lovely cats</title>
 	<meta charset="utf-8">
 	<meta name="description" content="Your lovly cats. Твои любимые кошки" />
 	<meta name="robots" content="noodp" />
