--- a/cat.html
+++ b/cat.html
@@ -128,7 +128,7 @@ Purina One Природа Здоровья содержит натуральну
 <div class="col-lg-12">
 <div style="display: none" class="box6">
 <p>
-Многие любители кошек, которые содержат кошек многие годы, последнее врем стали замечать, что кошки 
+Многие любители кошек, которые содержат кошек многие годы, последнее время стали замечать, что кошки 
 становятся умнее с предыдущими их сородичами. Кошки лучше понимают своих хозяев, больше понимают слов и фраз. 
 Я уверена, что это связано с кормлением кошки. Получая все необходимые вещества, мозг кошки  лучше развивается.  
 Некоторые кошки пытаются разговаривать с людьми, пытаются произносить слова. Возможно, когда-нибудь в будущем,
@@ -245,7 +245,7 @@ Purina One Природа Здоровья содержит натуральну
 <div style="display: none" class="all-cat3">
 <p class="descr">
 Британская короткошерстная – крепкие кошки по структуре тела, шерсть короткая, мягкая. Кошка имеет своенравный характер. 
-Может долго находится одна дома. Имеет собственное мнение, упряма, но найти общий язык с этой кошкой можно, если считаться с 
+Может долго находиться одна дома. Имеет собственное мнение, упряма, но найти общий язык с этой кошкой можно, если считаться с 
 ее мнением. По своему внешнему виду напоминает медвежонка, чем и привлекает к себе внимание. Большинство кошек британской 
 породы имеют круглую мордашку с оранжевыми глазами.
 </p></div>
