--- a/EX2.html
+++ b/EX2.html
@@ -11,7 +11,7 @@
 <style>	
 body {
 
-background: url(beach.jpg) ;
+background:  ;
 margin: 0; /* Убираем отступы в браузере */
 text-align: center;
 font-family: Georgia !important;
